# GPT-from-scratch

./: .gitignore  create_memmap.py  playground.py  pyproject.toml  test_mem.py  tokenize_pipeline.py  verify_cuda.py  verify_roc.py  verify_tokens.py
training/: calculate_params.py  dataloader.py  model.py  playground.py  playground.py.save  train.py
